# CeruleanPlayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ccpp.yml
src/: CeruleanPlayer.cpp  CeruleanPlayer.h  Metadata.h  Player.cpp  Player.h  Window.cpp  Window.h  cerulean_player.cpp  cerulean_player.h  helpers.h  main.cpp  meta_definitions.h  metadata.h  player.cpp  player.h  window.cpp  window.h
src/Extensions/: Extension.h  ExtensionManager.cpp  ExtensionManager.h  TestExtension.h
src/Extensions/Core/: MetadataExtension.cpp  MetadataExtension.h  SpeedExtension.cpp  SpeedExtension.h  TitleScrollerExtension.cpp  TitleScrollerExtension.h  VolumeExtension.cpp  VolumeExtension.h
src/extensions/: extension.h  extension_manager.cpp  extension_manager.h
src/extensions/core/: metadata_extension.cpp  metadata_extension.h  paused_extension.cpp  paused_extension.h  speed_extension.cpp  speed_extension.h  title_scroller_extension.cpp  title_scroller_extension.h  volume_extension.cpp  volume_extension.h
